--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@xstate/react": "^1.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-tabs": "^3.2.2",
+    "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "uuid": "^8.3.2",
+    "web-vitals": "^1.0.1",
+    "xstate": "^4.23.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +44,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-tabs": "^2.3.3",
+    "@types/styled-components": "^5.1.12",
+    "@types/uuid": "^8.3.1"
   }
 }
