--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@types/react-router-dom": "^5.3.0",
     "@xstate/react": "^1.5.1",
     "axios": "^0.21.4",
+    "graphql": "^15.6.0",
+    "graphql-request": "^3.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
