--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-table": "^7.7.0",
     "react-tabs": "^3.2.2",
     "styled-components": "^5.3.0",
     "typescript": "^4.1.2",
