--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-table": "^7.7.5",
     "@types/react-tabs": "^2.3.3",
     "@types/styled-components": "^5.1.12",
     "@types/uuid": "^8.3.1"
